--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.5",
     "json-server": "^1.0.0-beta.2",
+    "moment": "^2.30.1",
     "pinia": "^2.2.2",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.4.29",
